Rebrand project to CCCG

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,5 @@ Bug-Tracker = "https://github.com/arthexis/cccg/issues"
 
 
 [project.scripts]
-sigils = "cccg.__main__:main"
+cccg = "cccg.__main__:main"
 
